[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-gradlab"
version = "0.1.0"
description = "GradLab OpenEnv environment for neural-network training failure diagnosis and repair"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.59.7",
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "server.app:main"
gradlab-inference = "inference:main"

[tool.setuptools]
py-modules = ["gradlab_env", "inference"]
packages = ["server"]
